# gatekeeper

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  tmp_patch  tmp_readme_patch
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  size.yml
benches/: primitives.rs  stack_profile.rs
docs/: stack_profiling.md  threat_model.md
examples/: README.md  embassy_async.rs  identity_roundtrip.rs  rp2040_basic.rs  rtic_tasks.rs  system_check.rs  zk_roundtrip.rs
firmware/rp2040-basic/: Cargo.toml  memory.x
firmware/rp2040-basic/src/: main.rs
src/: error.rs  lib.rs  logging.rs
src/contacts/: mod.rs  poseidon.rs
src/handshake/: capability.rs  mod.rs  noise.rs  ratchet.rs
src/identity/: access.rs  entropy.rs  hkdf.rs  init.rs  keys.rs  link.rs  mod.rs  persist.rs  seed.rs  types.rs
src/platform/: alloc.rs  device.rs  hal.rs  mod.rs  network.rs  nrf.rs  rom.rs  rp2040.rs  secure_boot.rs  secure_vault.rs  stm32.rs
src/storage/: flash.rs  gate.rs  littlefs.rs  mod.rs  secure.rs
src/zk/: handshake.rs  mod.rs  proof.rs  prover.rs  verifier.rs
tests/: contacts.rs  entropy.rs  handshake.rs  hkdf.rs  identity.rs  proptests.rs  storage_gate.rs  zk.rs
