[package]
name = "zk-gatekeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize", "precomputed-tables"] }
zeroize = { version = "1.7", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"], optional = true }
log = { version = "0.4", default-features = false }
thiserror = { version = "1.0", default-features = false }
subtle = { version = "2.5", default-features = false }
littlefs2 = { version = "0.6.1", default-features = false, features = ["alloc", "log-none"], optional = true }
smoltcp = { version = "0.11.0", default-features = false, features = ["proto-ipv4", "socket-udp", "socket-tcp", "medium-ethernet"], optional = true }
rtic = { version = "2.1.0", optional = true }
rp2040-hal = { version = "0.10", default-features = false, features = ["rt"], optional = true }
embassy-executor = { version = "0.5.1", default-features = false, features = ["arch-std", "task-arena-size-1024"], optional = true }
embassy-time = { version = "0.3.2", default-features = false, features = ["std"], optional = true }
static_cell = { version = "2.1.0", optional = true }

# для RP2040 (позже подключается)
# rp2040-hal = "0.10"

[features]
default = [
    "flash-storage",
    "network",
    "contacts",
    "handshake",
    "secure-storage",
    "storage-gate",
]
flash-storage = ["dep:littlefs2"]
network = ["dep:smoltcp"]
contacts = []
handshake = ["dep:x25519-dalek"]
secure-storage = []
storage-gate = []
rtic-demo = ["dep:rtic", "dep:rp2040-hal", "network"]
embassy-demo = ["dep:embassy-executor", "dep:embassy-time", "dep:static_cell", "network"]

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
stacker = "0.1.22"
panic-halt = "0.2.0"
proptest = "1.4"

[[bench]]
name = "stack_profile"
harness = false

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
